@@ -31,6 +31,8 @@
 #include <attr/attributes.h>
 #endif
 
+#include "version.h"
+
 /* plugin config for all request/connections */
 
 typedef struct {
@@ -578,7 +580,7 @@ static void http_list_directory_footer(server *srv, connection *con, plugin_data
 	if (p->conf.set_footer->used > 1) {
 		buffer_append_string_buffer(out, p->conf.set_footer);
 	} else if (buffer_is_empty(con->conf.server_tag)) {
-		buffer_append_string_len(out, CONST_STR_LEN(PACKAGE_NAME "/" PACKAGE_VERSION));
+		buffer_append_string_len(out, CONST_STR_LEN(PACKAGE_DESC));
 	} else {
 		buffer_append_string_buffer(out, con->conf.server_tag);
 	}
